sumo/tests/netconvert/errors/errors/broken_edge/edge#type__empty4/errors.netconvert
Error: Edge '4' has an empty type.
Quitting (on error).
